Refactoring of service layers methods. Exception handling is done, also added external API error wrapper. Return types have been modified to fit right way in HTTP processing. Added wrapper for ProducerTemplate to uncouple it's implementation. Some classes have been renamed to conform application logic. Added caching. Repository hierarchy little bit more structured now.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,11 @@
 user.id.is_empty=User id is not defined
 group.id.is_empty=Group id is not defined
-invalid.input.data=Input data is invalid
 unsupported.content_type=Unsupported content type
-missing.request_body=Request body is missing or invalid
+invalid.request_body=Request body is missing or invalid
 empty.token.header=Provide service token to process request
 missing.headers=Missing headers
-bad.request=400
-user.not_found=User not found
+user.not_found=User {0} not found
+too.many.requests=Request rate limit exceed
+error.400=Bad request
+error.404=Not found
+error.400.external.reason=External error. Details are below.
