Added OAuth2 provider (Keycloak) to handle authentication and authorization for secured endpoint, other security configuration. Added dockerfile and docker compose ymls. Other small code refactoring.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
-user.id.is_empty=User id is not defined
-group.id.is_empty=Group id is not defined
+user.id.is_empty=User id is not specified
+group.id.is_empty=Group id is not specified
 unsupported.content_type=Unsupported content type
 invalid.request_body=Request body is missing or invalid
 empty.token.header=Provide service token to process request
@@ -7,5 +7,7 @@ missing.headers=Missing headers
 user.not_found=User {0} not found
 too.many.requests=Request rate limit exceed
 error.400=Bad request
+error.401=Not authorized
 error.404=Not found
-error.400.external.reason=External error. Details are below.
+error.400.external.reason=External error. Details are below
+error.503=Authentication provider server not available
